<resources>
    <string name="app_name">HomeVoice</string>
    <string name="created_by">Created by Petr Kovář (2017)</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="userName">Name</string>
    <string name="devices">Devices</string>
    <string name="modules">Modules</string>
    <string name="apps">Apps</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="zway">Z-Way</string>
    <string name="home">Home</string>
    <string name="not_implemented_yet">Not implemented yet</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="options">Options</string>
    <string name="floor_plan">Floor Plan</string>
    <string-array name="plan_options">
        <item>Load Plan</item>
        <item>Map Room</item>
    </string-array>
    <string name="alarm">Alarm</string>
    <string name="door">Door</string>
    <string name="light">Light</string>
    <string name="climate">Climate</string>
    <string name="power">Power</string>
    <string name="camera">Camera</string>
    <string name="zway_settings">Z-Way Settings</string>
    <string name="default_zway_url">https://find.z-wave.me</string>
    <string name="default_local_ip">192.168.0.1</string>
    <string name="default_local_port">8083</string>
    <string name="keyword_spotting">Keyword Spotting</string>
    <string name="label_devices_with_tag">Devices with tag</string>
    <string name="label_devices_with_type">Devices with type</string>
    <string name="label_devices_with_location">Devices with location</string>
    <string name="label_devices_with_id">Devices with id</string>
    <string name="device_settings">Device Settings</string>
    <string name="device_title">Title</string>
    <string name="device_type">Type</string>
    <string name="device_visibility">Visibility</string>
    <string name="device_visible">visible</string>
    <string name="device_invisible">invisible</string>
    <string-array name="device_categories">
        <item>Alarm</item>
        <item>Door</item>
        <item>Light</item>
        <item>Climate</item>
        <item>Power</item>
        <item>Camera</item>
        <item>Other</item>
    </string-array>
    <string-array name="goodbye">
        <item>Goodbye</item>
        <item>Bye bye</item>
        <item>See you</item>
        <item>See you later</item>
        <item>Have a good day</item>
        <item>Bye</item>
        <item>Adios</item>
    </string-array>
    <string-array name="about_response">
        <item>I\'m HomeVoice, your personal assistant.</item>
        <item>My name is HomeVoice and I\'m your personal assistant.</item>
        <item>I\'m your personal assistant HomeVoice.</item>
        <item>I\'m your personal assistant, I\'m HomeVoice.</item>
        <item>Call me HomeVoice, I\'m your personal assistant.</item>
        <item>I\'m HomeVoice, the butler of your smart home.</item>
    </string-array>
    <string-array name="abilities_response">
        <item>I can control and secure you smart home.</item>
        <item>I control all smart devices at your home.</item>
        <item>There\'s almost nothing I couldn\'t do for your smart home.</item>
    </string-array>
    <string-array name="room_count_response">
        <item>Your smart home consists of %1$s rooms.</item>
        <item>Your smart home includes %1$s rooms.</item>
        <item>You have %1$s rooms in your smart home.</item>
        <item>There are %1$s rooms in your smart home. </item>
    </string-array>
    <string-array name="room_list_response">
        <item>Your smart home consists of </item>
        <item>Your smart home includes </item>
        <item>You have the following rooms: </item>
        <item>Here is the list of your rooms: </item>
    </string-array>
    <string-array name="cancel_response">
        <item>As you wish.</item>
        <item>I\'m quiet now.</item>
    </string-array>
    <string-array name="current_time">
        <item>It\'s %1$s.</item>
        <item>It is %1$s. </item>
        <item>The time is %1$s.</item>
    </string-array>
    <string-array name="repeated_time_query">
        <item>You\'re really interested in time, aren\'t you?</item>
        <item>It\'s the same time it was few seconds ago.</item>
        <item>The time hasn\'t changed since your last query.</item>
        <item>It\'s not funny to ask for the time again.</item>
    </string-array>
    <string-array name="your_name_is">
        <item>I\'ll call you %1$s.</item>
        <item>OK %1$s, that\'s nice name. </item>
        <item>Hi %1$s, my name is HomeVoice.</item>
        <item>Nice to meet you %1$s, my name is HomeVoice.</item>
        <item>You are %1$s, I\'m HomeVoice.</item>
    </string-array>
    <string-array name="compliment_response">
        <item>Thank you.</item>
        <item>It\'s nice from you.</item>
        <item>Thanks.</item>
        <item>I appreciate it.</item>
        <item>My pleasure.</item>
        <item>Thanks for your kind words.</item>
        <item>Thank you. That\'s very kind of you.</item>
        <item>You\'re too kind.</item>
        <item>Thanks a lot.</item>
        <item>Thank you very much.</item>
    </string-array>
    <string-array name="criticism_response">
        <item>I\'m sorry!</item>
        <item>Whoops! Sorry!</item>
        <item>Oh! Sorry!</item>
        <item>Oh, my bad!</item>
        <item>I apologize.</item>
        <item>My mistake.</item>
        <item>My apologies.</item>
        <item>I hope you can forgive me.</item>
        <item>Sorry about that.</item>
        <item>My fault.</item>
    </string-array>
    <string-array name="fault_description_request">
        <item>Could you please explain what is wrong?</item>
        <item>Please explain what I did wrong.</item>
        <item>How could I do it better?</item>
        <item>Can you please describe my fault?</item>
        <item>Please describe the correct behavior?</item>
    </string-array>
    <string-array name="fault_description_response">
        <item>Thank you for your help.</item>
        <item>Thanks for fault description.</item>
        <item>I appreciate your help.</item>
    </string-array>
    <string-array name="multiple_lights_response">
        <item>There are multiple lights at your smart home.</item>
        <item>Your smart home contains multiple lights.</item>
    </string-array>
    <string-array name="not_available_singular">
        <item>There isn\'t any %1$s in your %2$s.</item>
        <item>I can\'t see any %1$s in your %2$s.</item>
        <item>Your %2$s doesn\'t contain any %1$s.</item>
        <item>You don\'t have any %1$s in your %2$s.</item>
        <item>It seems You don\'t have any %1$s in your %2$s.</item>
    </string-array>
    <string-array name="not_available_plural">
        <item>There aren\'t any %1$s in your %2$s.</item>
        <item>I can\'t see any %1$s in your %2$s.</item>
        <item>Your %2$s doesn\'t contain any %1$s.</item>
        <item>You don\'t have any %1$s in your %2$s.</item>
        <item>It seems You don\'t have any %1$s in your %2$s.</item>
    </string-array>
    <string-array name="device_available_response">
        <item>But I can see %1$s in your %2$s.</item>
        <item>But I can see %1$s available in your %2$s.</item>
        <item>But there is %1$s in your %2$s.</item>
        <item>But there is %1$s available in your %2$s.</item>
        <item>But your %2$s contains some %1$s.</item>
        <item>But your %2$s contains some %1$s.</item>
        <item>But You have some %1$s in your %2$s.</item>
        <item>But it seems You have some %1$s in your %2$s.</item>
    </string-array>
    <string-array name="wanna_know_value">
        <item>Would you like to know %1$s in your %2$s?</item>
        <item>Are you interested in %1$s in your %2$s?</item>
        <item>Want to know %1$s in your %2$s?</item>
        <item>Should I tell you %1$s in your %2$s?</item>
        <item>Interested in %1$s in your %2$s?</item>
    </string-array>
    <string-array name="turned_on_off">
        <item>I just turned the %1$s %2$s in your %3$s.</item>
        <item>I turned the %1$s %2$s in your %3$s.</item>
        <item>The %1$s has just been turned %2$s in your %3$s.</item>
    </string-array>
    <string-array name="turned_on_off_already">
        <item>The %1$s has already been turned %2$s in your %3$s.</item>
    </string-array>
    <string-array name="set_level">
        <item>I just set the %1$s level %2$s in your %3$s.</item>
        <item>I set the %1$s level %2$s in your %3$s.</item>
        <item>The %1$s level has just been set %2$s in your %3$s.</item>
    </string-array>
    <string-array name="value_binary_response">
        <item>%1$s is turned %2$s in %3$s.</item>
        <item>%1$s is %2$s in %3$s.</item>
        <item>%1$s is turned %2$s in your %3$s.</item>
        <item>%1$s is %2$s in your %3$s.</item>
        <item>In %3$s %1$s is turned %2$s.</item>
        <item>In your %3$s %1$s is turned %2$s.</item>
        <item>In %3$s %1$s is %2$s.</item>
        <item>%3$s %1$s is %2$s.</item>
        <item>%3$s %1$s is turned %2$s.</item>
    </string-array>
    <string-array name="value_multilevel_response">
        <item>%1$s level is %2$s in %3$s.</item>
        <item>Level of %1$s is %2$s in %3$s.</item>
        <item>%1$s level is %2$s in your %3$s.</item>
        <item>Level of %1$s is %2$s in your %3$s.</item>
        <item>In %3$s %1$s level is %2$s.</item>
        <item>In your %3$s %1$s level is %2$s.</item>
        <item>%3$s %1$s level is %2$s.</item>
        <item>Level of %3$s %1$s is %2$s.</item>
    </string-array>
    <string-array name="set_level_already">
        <item>The %1$s has already been set %2$s in your %3$s.</item>
    </string-array>
    <string-array name="device_in_several_locations">
        <item>You\'ve got a %1$s in %2$s.</item>
        <item>There is a %1$s in %2$s.</item>
        <item>I can see a %1$s in %2$s.</item>
    </string-array>
    <string-array name="select_location">
        <item>Please, select one or more locations.</item>
        <item>Which location do you mean?</item>
        <item>Choose one or more locations.</item>
        <item>Please, specify the location.</item>
    </string-array>
    <string-array name="smart_home_contains">
        <item>You have %1$s.</item>
    </string-array>
    <string-array name="what_query">
        <item>What would you like to know about %1$s?</item>
        <item>How can I help you with %1$s?</item>
    </string-array>
    <string-array name="unknown">
        <item>Sorry, I didn\'t get that.</item>
        <item>I\'m not sure, what you meant.</item>
        <item>I\'m sorry, but I didn\'t understand.</item>
    </string-array>
    <string-array name="temperature_response">
        <item>Temperature in %2$s is %1$s °C.</item>
    </string-array>
    <string-array name="average_temperature_response">
        <item>Average temperature in %2$s is %1$s degrees Celsius.</item>
    </string-array>
    <string-array name="humidity_response">
        <item>Humidity in %2$s is %1$s%%.</item>
    </string-array>
    <string-array name="average_humidity_response">
        <item>Average humidity in %2$s is %1$s%%.</item>
    </string-array>
    <string-array name="illuminance_response">
        <item>Illuminance in %2$s is %1$s Lux.</item>
    </string-array>
    <string-array name="average_illuminance_response">
        <item>Average illuminance in %2$s is %1$s Lux.</item>
    </string-array>
    <string-array name="uv_radiation_response">
        <item>UV radiation in %2$s is %1$s of UV index.</item>
    </string-array>
    <string-array name="average_uv_radiation_response">
        <item>Average UV radiation in %2$s is %1$s of UV index.</item>
    </string-array>
</resources>