<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:id="@+id/front_view"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/device_settings"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/textView"
            android:textSize="22sp"
            android:textStyle="normal|bold"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:background="@color/colorPrimaryDark" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="7"
            android:columnCount="3"
            android:layout_gravity="center"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimaryDark"
            android:layout_marginTop="5dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/device_title"
                android:id="@+id/deviceTitleLabel"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical|right"
                android:textColor="@android:color/white" />

            <EditText
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:id="@+id/deviceTitleEdit"
                android:layout_row="1"
                android:layout_column="1"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:textColor="@android:color/white"
                android:textColorHint="@color/colorHint"
                android:focusable="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/device_type"
                android:id="@+id/deviceTypeLabel"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical|end"
                android:textColor="@android:color/white" />

            <Spinner
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:id="@+id/deviceTypeSpinner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/device_visibility"
                android:id="@+id/deviceVisibilityLabel"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_margin="5dp"
                android:layout_gravity="center_vertical|end"
                android:textColor="@android:color/white" />

            <Switch android:id="@+id/deviceVisibilitySwitch"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:checked="false"
                android:layout_marginStart="50dp"
                android:layout_marginBottom="10dp"
                android:showText="true"
                android:textOff="@string/device_invisible"
                android:textOn="@string/device_visible" />

        </GridLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:id="@+id/cancelButton"
                android:text="@string/cancel"
                android:background="@color/colorPrimaryDark"
                android:foreground="?android:attr/selectableItemBackground"/>

            <Space
                android:layout_height="wrap_content"
                android:layout_width="5dp" />

            <Button
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:id="@+id/applyButton"
                android:text="@string/apply"
                android:background="@color/colorPrimaryDark"
                android:foreground="?android:attr/selectableItemBackground"/>

        </LinearLayout>


    </LinearLayout>

</FrameLayout>